--- a/static_devconnect/pages/index.html
+++ b/static_devconnect/pages/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Eloysa Marques">
@@ -8,12 +9,11 @@
 
     <title>Tela login - DevConnect</title>
 
-    <link rel="shortcut icon" href="../images/devconnect 3.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/devconnect 3g" type="image/x-icon">
 
     <!-- CSS -->
      <link rel="stylesheet" href="../styles/global.css">
      <link rel="stylesheet" href="../styles/login.css">
-
 
 </head>
 
@@ -23,18 +23,18 @@
         <div>
             <!--formulario-->
             <form id="formulario" class="estilo-formulario">
-                <img src="../images/devconnect 1.svg" alt="">
+                <img src="../images/DevConnect -  certo.svg" class="logo-login" alt="">
 
                 <div>
-                    <label for=""></label>
+                    <label for="">Nome de usuário:</label>
                     <input type="text" name="" id="">
                 </div>
                 <div>
-                    <label for=""></label>
+                    <label for="">Senha:</label>
                     <input type="password" name="" id="">
                 </div>
 
-                <button type="submit">Entrar</button>
+                <button type="submit" class="formulario-botao-azul">Entrar</button>
 
                 <p>ou</p>
 
@@ -44,7 +44,7 @@
 
             <!--seção cadastro-->
             <section id="secao-cadastro" class="estilo-formulario">
-                <p>Não tem conta? <span>Cadastre-se</span></p>
+                <p>Não tem conta? <a href="../pages/cadastro.html">Cadastre-se</a></p>
             </section>
 
             <p class="informacao-aplicativo">Obtenha o aplicativo</p>
@@ -59,4 +59,5 @@
         </div>
     </main>
 </body>
+
 </html>
