Inicializa tela feed - estruturando e estilizando com html e css

--- a/static_devconnect/pages/cadastro.html
+++ b/static_devconnect/pages/cadastro.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Eloysa Marques">
     <meta name="description" content="Site de empresa DevConnect">
 
-    <title>Tela cadastro - DevConnect</title>
+    <title>Cadastro - DevConnect</title>
 
     <link rel="shortcut icon" href="../images/devconnect 3.svg" type="image/x-icon">
 
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <h1>Tela principal cadastro</h1>
+    <h1>Tela principal cadastro - DevConnect</h1>
 
     <main>
         <div>
