--- a/static_devconnect/pages/index.html
+++ b/static_devconnect/pages/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1>Tela principal login</h1>
+    <h1>Tela principal login - DevConnect</h1>
     <main>
         <div>
             <!--formulario-->
