--- a/static_devconnect/pages/index.html
+++ b/static_devconnect/pages/index.html
@@ -9,7 +9,7 @@
 
     <title>Tela login - DevConnect</title>
 
-    <link rel="shortcut icon" href="../images/devconnect 3g" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/devconnect 3.svg" type="image/x-icon">
 
     <!-- CSS -->
      <link rel="stylesheet" href="../styles/global.css">
